RichwoodNew/src/objects/Device__c.object
<CustomObject>
    <description>Richwood Computing and Communication Device inventory</description>
    <fields>
        <fullName>Cellular_Number__c</fullName>
        <description>North American Cellular Numbers</description>
        <inlineHelpText>Input as ten digits, without the leading &quot;1&quot;</inlineHelpText>
        <label>Cellular Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cellular_Provider__c</fullName>
        <description>Device Cellular Provider</description>
        <label>Cellular Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Appalachian Wireless</fullName>
                </value>
                <value>
                    <fullName>Rogers</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Make__c</fullName>
        <description>Device Manufacturer</description>
        <label>Device Make</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Grandstream</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>Meraki</fullName>
                </value>
                <value>
                    <fullName>Motorola</fullName>
                </value>
                <value>
                    <fullName>Netgear</fullName>
                </value>
                <value>
                    <fullName>Nokia</fullName>
                </value>
                <value>
                    <fullName>Novatel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pantech</fullName>
                </value>
                <value>
                    <fullName>Ricoh</fullName>
                </value>
                <value>
                    <fullName>RIM</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Sierra Wireless</fullName>
                </value>
                <value>
                    <fullName>Vizio</fullName>
                </value>
                <value>
                    <fullName>ZTE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Model__c</fullName>
        <description>Device Model</description>
        <label>Device Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iPad 1st Gen - A1219 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad 1st Gen - A1337 (3G)</fullName>
                </value>
                <value>
                    <fullName>iPad 2nd Gen - A1395 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad 2nd Gen - A1396 (GSM)</fullName>
                </value>
                <value>
                    <fullName>iPad 2nd Gen - A1397 (CDMA)</fullName>
                </value>
                <value>
                    <fullName>iPad 3rd Gen - A1416 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad 3rd Gen - A1440 (4G)</fullName>
                </value>
                <value>
                    <fullName>iPad 3rd Gen - A1403 (4G VZ)</fullName>
                </value>
                <value>
                    <fullName>iPad Mini 1st Gen - A1432 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad Mini 1st Gen - A1454 (4G)</fullName>
                </value>
                <value>
                    <fullName>iPad Mini 1st Gen - A1455 (4G MM)</fullName>
                </value>
                <value>
                    <fullName>iPad 4th Gen - A1458 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad 4th Gen - A1459 (4G)</fullName>
                </value>
                <value>
                    <fullName>iPad 4th Gen - A1459 (4G MM)</fullName>
                </value>
                <value>
                    <fullName>iPad Mini 2nd Gen - A1489 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad Mini 2nd Gen - A1490 (4G)</fullName>
                </value>
                <value>
                    <fullName>iPad Air 5th Gen - A1474 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad Air 5th Gen - A1475 (4G)</fullName>
                </value>
                <value>
                    <fullName>iPad Mini 3rd Gen - A1599 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad Mini 3rd Gen - A1600 (4G)</fullName>
                </value>
                <value>
                    <fullName>iPad Air 2 6th Gen - A1566 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad Air 2 6th Gen - A1667 (4G)</fullName>
                </value>
                <value>
                    <fullName>iPad Mini 4th Gen - A1538 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad Mini 4th Gen - A1550 (4G)</fullName>
                </value>
                <value>
                    <fullName>iPad Pro - A1584 (Wifi)</fullName>
                </value>
                <value>
                    <fullName>iPad Pro - A1652 (4G)</fullName>
                </value>
                <value>
                    <fullName>iPhone - A1203</fullName>
                </value>
                <value>
                    <fullName>iPhone 3G - A1241 (3G)</fullName>
                </value>
                <value>
                    <fullName>iPhone 3GS - A1303 (3G)</fullName>
                </value>
                <value>
                    <fullName>iPhone 4 - A1332 (GSM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hostname__c</fullName>
        <label>Hostname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMEI__c</fullName>
        <description>Device IMEI</description>
        <label>IMEI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Storage__c</fullName>
        <description>Internal Storage (Phones &amp; Tablets)</description>
        <inlineHelpText>Enter in Gigabytes</inlineHelpText>
        <label>Internal Storage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MEID__c</fullName>
        <description>Device MEID</description>
        <label>MEID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS_Version__c</fullName>
        <label>OS Version</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prontoforms_Username__c</fullName>
        <description>Associated Prontoforms Username, if applicable</description>
        <label>Prontoforms Username</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wireless_Mac_Address__c</fullName>
        <description>Device Wireless Mac Address</description>
        <inlineHelpText>Input letters and numbers with no spaces or separators (eg, &quot;:&quot; or &quot;.&quot;)</inlineHelpText>
        <label>Wireless Mac Address</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Device</label>
    <listViews>
        <fullName>All_Devices</fullName>
        <columns>NAME</columns>
        <columns>Device_Make__c</columns>
        <columns>Device_Model__c</columns>
        <columns>Cellular_Provider__c</columns>
        <columns>IMEI__c</columns>
        <columns>OS_Version__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Devices</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>